added addShows and addShowSeats functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8081
+logger.level=debug
 
+#Database Connection
+spring.datasource.url=jdbc:mysql://localhost:3306/book_my_show
+spring.datasource.username=root
+spring.datasource.password=mySqlak
+
+#DDL Generation
+spring.jpa.generate-ddl=true
