--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.datasource.password=mySqlak
 
 #DDL Generation
 spring.jpa.generate-ddl=true
+
+#email credential
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=springboot171@gmail.com
+spring.mail.password=yyviahscckxvbtqp
+spring.mail.properties.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#swagger http://localhost:8081/swagger-ui/index.html#/
